cmake_minimum_required(VERSION 3.15)
project(lemin2 C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(lemin2
        includes/lemin.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/srcs/ft_abs.c
        libft/srcs/ft_array_add.c
        libft/srcs/ft_array_foreach.c
        libft/srcs/ft_array_get.c
        libft/srcs/ft_array_init.c
        libft/srcs/ft_array_remove.c
        libft/srcs/ft_array_remove_all.c
        libft/srcs/ft_array_size.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bubble_sort.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_calloc.c
        libft/srcs/ft_getc.c
        libft/srcs/ft_intmove.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_isspace.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstadd_back.c
        libft/srcs/ft_lstaddblank.c
        libft/srcs/ft_lstaddrevsorted.c
        libft/srcs/ft_lstaddsorted.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstfind.c
        libft/srcs/ft_lstget.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_lstnewblank.c
        libft/srcs/ft_lstremove_if.c
        libft/srcs/ft_lstsize.c
        libft/srcs/ft_max.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memndup.c
        libft/srcs/ft_memrealloc.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_min.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_queue_add.c
        libft/srcs/ft_queue_poll.c
        libft/srcs/ft_safe_atoi.c
        libft/srcs/ft_stack_delall.c
        libft/srcs/ft_stack_init.c
        libft/srcs/ft_stack_pop.c
        libft/srcs/ft_stack_push.c
        libft/srcs/ft_stack_size.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlcpy.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strndup.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strpbrk.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strrev.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtol.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/ft_trim_spaces.c
        libft/srcs/ft_voidcpy.c
        libft/srcs/get_next_line.c
        srcs/calc_total_len.c
        srcs/check_all.c
        srcs/destroy.c
        srcs/dijkstra_algo.c
        srcs/find_all_paths.c
        srcs/graph_create.c
        srcs/lem_list.c
        srcs/lemin.c
        srcs/line_parse.c
        srcs/links_parse.c
        srcs/mehmet_algo.c
        srcs/paths_work.c
        srcs/print.c
        srcs/read_input.c
        srcs/rooms_parse.c)
